Logging appending/removing relations is implemented; however it has no tests and works not really in the 'beautiful' way. README.md is updated.
