# internal/usersegmentation/models/models.go
@@ -1,6 +1,8 @@
 // models - пакет, содержащий структуры, описывающие сущности, используемые в проекте.
 package models
 
+import "time"
+
 // UserSegmentationDbProcessor - интерфейс, предоставляющий методы для работы с БД, хранящей данные о сегментации пользователей.
 type UserSegmentationDbProcessor interface {
 	// AddSegment - добавляет сегмент в БД.
@@ -27,6 +29,12 @@ type UserSegmentationDbProcessor interface {
 	//
 	// Возвращает: список сегментов, в которых состоит пользователь, и ошибку.
 	GetUserRelations(id int) ([]string, error)
+	// GetLogs - возвращает логи.
+	//
+	// Принимает: начальное время и конечное время.
+	//
+	// Возвращает: список логов и ошибку.
+	GetLogs(from time.Time, to time.Time) ([]Log, error)
 }
 
 // Segment - структура, описывающая сегмент.
@@ -44,6 +52,20 @@ type UserModification struct {
 	ID              // ID - id пользователя.
 	Append []string `json:"append"` // Append - список сегментов, в которые необходимо добавить пользователя.
 	Remove []string `json:"remove"` // Remove - список сегментов, из которых необходимо убрать пользователя.
+}
+
+// LogTimestamps - структура, описывающая временные рамки для логов.
+type LogTimestamps struct {
+	From time.Time `json:"from"` // From - начальное время.
+	To   time.Time `json:"to"`   // To - конечное время.
+}
+
+// Log - структура, описывающая лог.
+type Log struct {
+	ID                  // ID - id пользователя.
+	Segment             // Segment - сегмент.
+	Type      string    `json:"type"`       // Type - тип события.
+	Timestamp time.Time `json:"created_at"` // Timestamp - время события.
 }
 
 // Err - структура, описывающая ошибку.
